Fix part 4 of bug#9771 with assertion violation when wrap-prefix is used for a line that begins with control characters.

src/xdisp.c (push_display_prop): Determine whether to record string
 or buffer position by IT->string, not by IT->method.  Allow
 GET_FROM_DISPLAY_VECTOR as IT->method on entry.